--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,8 @@
                 android:layout_height="72dp"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="25dp"
-                android:src="@drawable/avatar"
                 android:clickable="true"
+                android:src="@drawable/avatar"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -66,8 +66,8 @@
                 android:layout_width="153dp"
                 android:layout_height="100dp"
                 android:layout_marginStart="10dp"
-                android:onClick="galeriView"
                 android:src="@drawable/galeri"
+                android:onClick="galleryView"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -76,10 +76,11 @@
                 app:layout_constraintVertical_bias="0.301" />
 
             <ImageView
-                android:id="@+id/imageView9"
+                android:id="@+id/about"
                 android:layout_width="153dp"
                 android:layout_height="100dp"
                 android:src="@drawable/about"
+                android:onClick="requestLocation"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.162"
@@ -96,7 +97,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/imageView9"
+                app:layout_constraintStart_toEndOf="@+id/about"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.48" />
 
