--- a/app/src/main/res/layout/galeri_view.xml
+++ b/app/src/main/res/layout/galeri_view.xml
@@ -23,8 +23,7 @@
                 app:layout_constraintHorizontal_bias="0.04"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.11"
-                app:srcCompat="@drawable/back" />
+                app:layout_constraintVertical_bias="0.11" />
 
             <TextView
                 android:id="@+id/textView3"
@@ -48,8 +47,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
-                app:layout_constraintVertical_bias="0.0"
-                app:srcCompat="@drawable/album1" />
+                app:layout_constraintVertical_bias="0.0"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
