--- a/app/src/main/res/layout/kamera_view.xml
+++ b/app/src/main/res/layout/kamera_view.xml
@@ -11,6 +11,16 @@
         android:layout_height="match_parent"
         android:id="@+id/cameraPreview"/>
 
+<!--    <FrameLayout-->
+<!--        android:id="@+id/container" android:layout_height="match_parent"-->
+<!--        android:layout_width="match_parent">-->
+<!--        <androidx.camera.view.PreviewView-->
+<!--            android:id="@+id/previewView"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_width="match_parent"/>-->
+<!--    </FrameLayout>-->
+
+
     <ImageButton
         android:layout_width="60sp"
         android:layout_height="60sp"
