--- a/app/src/main/res/layout/activity_album_detail.xml
+++ b/app/src/main/res/layout/activity_album_detail.xml
@@ -6,52 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".AlbumDetailActivity">
 
-    <TextView
-        android:id="@+id/folderNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text=""
-        android:textSize="20sp" />
 
-    <GridLayout
+    <GridView
+        android:numColumns="2"
+        android:gravity="center"
+        android:columnWidth="100dp"
+        android:stretchMode="columnWidth"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:id="@+id/albumDetailLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/folderNameTextView"
-        android:layout_marginTop="30dp"
-        android:columnCount="3"
-        android:rowCount="0"
-        android:columnOrderPreserved="false"
-        android:rowOrderPreserved="false"
-        android:useDefaultMargins="true"
-        android:padding="16dp">
-<!--        android:alignmentMode="alignBounds"-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/imageView1"-->
-<!--            android:layout_width="90dp"-->
-<!--            android:layout_height="120dp"-->
-<!--            android:layout_marginLeft="20dp"-->
-<!--            android:layout_marginRight="20dp"-->
-<!--            tools:srcCompat="@tools:sample/avatars" />-->
-<!--        <ImageView-->
-<!--            android:id="@+id/imageView2"-->
-<!--            android:layout_width="90dp"-->
-<!--            android:layout_height="120dp"-->
-<!--            android:layout_marginLeft="20dp"-->
-<!--            android:layout_marginRight="20dp"-->
-<!--            tools:srcCompat="@tools:sample/avatars" />-->
-<!--        <ImageView-->
-<!--            android:id="@+id/imageView3"-->
-<!--            android:layout_width="90dp"-->
-<!--            android:layout_height="120dp"-->
-<!--            android:layout_marginLeft="20dp"-->
-<!--            android:layout_marginRight="20dp"-->
-<!--            tools:srcCompat="@tools:sample/avatars" />-->
-<!--        -->
-    </GridLayout>
-
+        />
 
 </RelativeLayout>
