--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/notif"
                 android:layout_width="132dp"
                 android:layout_height="122dp"
                 android:layout_marginTop="16dp"
@@ -145,7 +145,7 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
             <ImageView
-                android:id="@+id/imageView15"
+                android:id="@+id/about_bawah"
                 android:layout_width="63dp"
                 android:layout_height="58dp"
                 android:layout_marginBottom="27dp"
