--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.constraintlayout.motion.widget.MotionLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:layoutDescription="@xml/activity_main_xml_constraintlayout_scene">
 
             <ImageView
                 android:id="@+id/profileView"
@@ -66,8 +68,8 @@
                 android:layout_width="153dp"
                 android:layout_height="100dp"
                 android:layout_marginStart="10dp"
+                android:onClick="galeriView"
                 android:src="@drawable/galeri"
-                android:onClick="galleryView"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -76,11 +78,10 @@
                 app:layout_constraintVertical_bias="0.301" />
 
             <ImageView
-                android:id="@+id/about"
+                android:id="@+id/imageView9"
                 android:layout_width="153dp"
                 android:layout_height="100dp"
                 android:src="@drawable/about"
-                android:onClick="requestLocation"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.162"
@@ -97,19 +98,20 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/about"
+                app:layout_constraintStart_toEndOf="@+id/imageView9"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.48" />
 
             <ImageView
                 android:id="@+id/imageView11"
-                android:layout_width="330dp"
-                android:layout_height="261dp"
-                android:layout_marginBottom="-75dp"
+                android:layout_width="345dp"
+                android:layout_height="77dp"
                 android:src="@drawable/nav"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintHorizontal_bias="0.531"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/imageView12"
@@ -134,7 +136,7 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
             <ImageView
-                android:id="@+id/imageView14"
+                android:id="@+id/galView"
                 android:layout_width="63dp"
                 android:layout_height="58dp"
                 android:layout_marginBottom="27dp"
@@ -155,7 +157,7 @@
                 app:layout_constraintHorizontal_bias="0.876"
                 app:layout_constraintStart_toStartOf="parent" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.motion.widget.MotionLayout>
     </LinearLayout>
 
 </RelativeLayout>
