--- a/app/src/main/res/layout/activity_album_detail.xml
+++ b/app/src/main/res/layout/activity_album_detail.xml
@@ -27,7 +27,9 @@
             android:id="@+id/scrollingText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:gravity="center"
+            android:layout_gravity="center" />
 
     </ScrollView>
 </LinearLayout>
