--- a/app/src/main/res/layout/grid_item_layout.xml
+++ b/app/src/main/res/layout/grid_item_layout.xml
@@ -2,7 +2,8 @@
 <!-- res/layout/grid_item_layout.xml -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/albumDetailLayout">
 
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/photo_view"
